Prevent footer from overlapping

--- a/src/styles/_clock.scss
+++ b/src/styles/_clock.scss
@@ -2,6 +2,7 @@
   display: flex;
   justify-content: center;
   align-items: baseline;
+  margin-top:auto;
   h2 {
     font-size: 8em;
     font-weight: 600;
